--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "php": "^8.0.2",
         "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "jeremy-dunn/php-fedex-api-wrapper": "^3.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "phpmailer/phpmailer": "^6.7",
         "phpoffice/phpspreadsheet": "^1.27",
         "yajra/laravel-datatables-oracle": "^10.3"
     },
