--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
-        "phpoffice/phpspreadsheet": "^1.27",
+        "phpoffice/phpspreadsheet": "^1.27"
     },
+    "require-dev":{
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
