add email functinality

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/helper.php"
+            "app/helper.php",
+            "app/Helpers/Global.php"
         ]
     },
     "autoload-dev": {
