--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
-      - name: Compile CSS and Javascript
-        run: |
-          npm install
-          npm run prod
+    #  - name: Compile CSS and Javascript
+    #    run: |
+    #      npm install
+    #      npm run prod
 
       - name: Generate key
         run: php artisan key:generate
@@ -30,10 +30,9 @@ jobs:
       - name: Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
 
-      - name: Compile CSS and Javascript
-        run: |
-          npm install
-          npm run prod
+ #     - name: Compile CSS and Javascript
+ #       run: |
+ #       npm run prod
 
       - name: Create Database
         run: |
