--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,10 @@ jobs:
     #      npm run prod
 
       - name: Generate key
-        run: php artisan key:generate
+        run: sudo php artisan key:generate
 
       - name: Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
+        run: sudo chmod -R 777 storage bootstrap/cache
 
  #     - name: Compile CSS and Javascript
  #       run: |
