--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,38 +1,25 @@
-name: 'Prod Deployment'
+name: Laravel
 
 on:
   push:
-    branches: [ staging ]
-  workflow_dispatch:
+    branches:
+      - staging
 
 jobs:
-  ci:
-    name: Run CI
-    uses: ./.github/workflows/ci.yml
-    secrets: inherit
+  build:
+    runs-on: ubuntu-latest
 
-  stage:
-    name: 'Deployment Pipeline For Backend'
-    runs-on: [self-hosted, Production-Motion]
-    needs: ci
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install php -y
+          composer install --prefer-dist --no-progress --no-suggest --no-interaction
 
       - name: 'Pull latest'
         working-directory: /var/www/vhosts/staging.saitalogistics.com/htdocs
         run: |
-          sudo git pull origin staging
-
-      - name: 'Full permission of Storage folder'
-        working-directory: /var/www/vhosts/staging.saitalogistics.com/htdocs
-        run: |
-          sudo chmod -R 777 storage/ && sudo chown -R ubuntu:ubuntu .
-
-      - name: Install Dependencies
-        working-directory: /var/www/vhosts/staging.saitalogistics.com/htdocs
-        run: composer
-
-      - name: Compile CSS and Javascript
-        working-directory: /var/www/vhosts/staging.saitalogistics.com/htdocs
-        run: |
-          npm install
-          npm run prod
+          sudo git pull
