--- a/package.json
+++ b/package.json
@@ -22,6 +22,20 @@
         "sass": "^1.56.1"
     },
     "dependencies": {
-        "react-router-dom": "^6.14.0"
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@web3modal/ethereum": "^2.6.2",
+        "@web3modal/react": "^2.6.2",
+        "react-router-dom": "^6.14.0",
+        "viem": "^1.2.9",
+        "wagmi": "^1.3.4",
+        "web-vitals": "^2.1.4"
+    },
+    "eslintConfig": {
+      "extends": [
+        "react-app",
+        "react-app/jest"
+      ]
     }
 }
