--- a/package.json
+++ b/package.json
@@ -25,17 +25,19 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@tronweb3/walletconnect-tron": "^2.0.0",
         "@web3modal/ethereum": "^2.6.2",
         "@web3modal/react": "^2.6.2",
+        "react-bootstrap": "^2.8.0",
         "react-router-dom": "^6.14.0",
         "viem": "^1.2.9",
         "wagmi": "^1.3.4",
         "web-vitals": "^2.1.4"
     },
     "eslintConfig": {
-      "extends": [
-        "react-app",
-        "react-app/jest"
-      ]
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
     }
 }
